myCompilerParser.java
// $ANTLR 3.5.2 myCompiler.g 2019-06-21 20:49:18

    // import packages here.
    import java.util.HashMap;
    import java.util.ArrayList;
    import java.util.Queue;
    import java.util.LinkedList;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ELSE", "EscapeSequence", 
		"FLOAT", "FOR", "Floating_point_constant", "IF", "INT", "Identifier", 
		"Integer_constant", "MAIN", "RelationOP", "STRING_LITERAL", "VOID", "WS", 
		"'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'='", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int CHAR=4;
	public static final int COMMENT=5;
	public static final int ELSE=6;
	public static final int EscapeSequence=7;
	public static final int FLOAT=8;
	public static final int FOR=9;
	public static final int Floating_point_constant=10;
	public static final int IF=11;
	public static final int INT=12;
	public static final int Identifier=13;
	public static final int Integer_constant=14;
	public static final int MAIN=15;
	public static final int RelationOP=16;
	public static final int STRING_LITERAL=17;
	public static final int VOID=18;
	public static final int WS=19;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


	    boolean TRACEON = false;

	    // ============================================
	    // Create a symbol table.
		// ArrayList is easy to extend to add more info. into symbol table.
		//
		// The structure of symbol table:
		// <variable ID, type, memory location>
		//    - type: the variable type   (please check "enum Type")
		//    - memory location: the location (locals in VM) the variable will be stored at.
	    // ============================================
	    HashMap<String, ArrayList> symtab = new HashMap<String, ArrayList>();

	    int labelCount = 0;
	   String[] remain=new String[20];
		int maxremain;

	   Queue<Integer> rqueue = new LinkedList<Integer>();

		// storageIndex is used to represent/index the location (locals) in VM.
		// The first index is 0.
		int storageIndex = 0;
	   

	    // Record all assembly instructions.
	    List<String> TextCode = new ArrayList<String>();

	    // Type information.
	    public enum Type{
	       INT, FLOAT, CHAR;
	    }


	    /*
	     * Output prologue.
	     */
	    void prologue()
	    {
	       TextCode.add(";.source");
	       TextCode.add(".class public static myResult");
	       TextCode.add(".super java/lang/Object");
	       TextCode.add(".method public static main([Ljava/lang/String;)V");

	       /* The size of stack and locals should be properly set. */
	       TextCode.add(".limit stack 100");
	       TextCode.add(".limit locals 100");
	    }
	    
		
	    /*
	     * Output epilogue.
	     */
	    void epilogue()
	    {
	       /* handle epilogue */
	       TextCode.add("return");
	       TextCode.add(".end method");
	    }
	    
	    
	    /* Generate a new label */
	    String newLabel()
	    {
	       labelCount ++;
	       return (new String("L")) + Integer.toString(labelCount);
	    } 
	    
	    
	    public List<String> getTextCode()
	    {
	       return TextCode;
	    }			

	   	



	// $ANTLR start "program"
	// myCompiler.g:93:1: program : VOID MAIN '(' ')' '{' declarations statements '}' ;
	public final void program() throws RecognitionException {
		try {
			// myCompiler.g:93:8: ( VOID MAIN '(' ')' '{' declarations statements '}' )
			// myCompiler.g:93:10: VOID MAIN '(' ')' '{' declarations statements '}'
			{
			match(input,VOID,FOLLOW_VOID_in_program36); 
			match(input,MAIN,FOLLOW_MAIN_in_program38); 
			match(input,21,FOLLOW_21_in_program40); 
			match(input,22,FOLLOW_22_in_program42); 

			           /* Output function prologue */
			           prologue();
			        
			match(input,30,FOLLOW_30_in_program63); 
			pushFollow(FOLLOW_declarations_in_program77);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_program90);
			statements();
			state._fsp--;

			match(input,31,FOLLOW_31_in_program100); 

					   if (TRACEON)
					      System.out.println("VOID MAIN () {declarations statements}");

			           /* output function epilogue */	  
			           epilogue();
			        
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "declarations"
	// myCompiler.g:113:1: declarations : ( type Identifier ';' declarations |);
	public final void declarations() throws RecognitionException {
		Token Identifier1=null;
		Type type2 =null;

		try {
			// myCompiler.g:113:13: ( type Identifier ';' declarations |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CHAR||LA1_0==FLOAT||LA1_0==INT) ) {
				alt1=1;
			}
			else if ( (LA1_0==IF||LA1_0==Identifier||LA1_0==31) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myCompiler.g:113:15: type Identifier ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations127);
					type2=type();
					state._fsp--;

					Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations129); 
					match(input,28,FOLLOW_28_in_declarations131); 
					pushFollow(FOLLOW_declarations_in_declarations133);
					declarations();
					state._fsp--;


								     if (TRACEON)
						                System.out.println("declarations: type Identifier : declarations");

					                 if (symtab.containsKey((Identifier1!=null?Identifier1.getText():null))) {
									    // variable re-declared.
					                    System.out.println("Type Error: " + 
					                                       Identifier1.getLine() + 
					                                       ": Redeclared identifier.");
					                    System.exit(0);
					                 }
					                 
									 /* Add ID and its attr_type into the symbol table. */
									 ArrayList the_list = new ArrayList();
									 the_list.add(type2);
									 the_list.add(storageIndex);
									 storageIndex = storageIndex + 1;
					                 symtab.put((Identifier1!=null?Identifier1.getText():null), the_list);
					              
					}
					break;
				case 2 :
					// myCompiler.g:134:9: 
					{

								     if (TRACEON)
					                    System.out.println("declarations: ");
								  
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "type"
	// myCompiler.g:141:1: type returns [Type attr_type] : ( INT | CHAR | FLOAT );
	public final Type type() throws RecognitionException {
		Type attr_type = null;


		try {
			// myCompiler.g:143:5: ( INT | CHAR | FLOAT )
			int alt2=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt2=1;
				}
				break;
			case CHAR:
				{
				alt2=2;
				}
				break;
			case FLOAT:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// myCompiler.g:143:7: INT
					{
					match(input,INT,FOLLOW_INT_in_type204); 
					 if (TRACEON) System.out.println("type: INT"); attr_type=Type.INT; 
					}
					break;
				case 2 :
					// myCompiler.g:144:7: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type214); 
					 if (TRACEON) System.out.println("type: CHAR"); attr_type=Type.CHAR; 
					}
					break;
				case 3 :
					// myCompiler.g:145:7: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type224); 
					if (TRACEON) System.out.println("type: FLOAT"); attr_type=Type.FLOAT; 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_type;
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myCompiler.g:148:1: statements : ( statement statements |);
	public final void statements() throws RecognitionException {
		try {
			// myCompiler.g:148:11: ( statement statements |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==IF||LA3_0==Identifier) ) {
				alt3=1;
			}
			else if ( (LA3_0==31) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myCompiler.g:148:12: statement statements
					{
					pushFollow(FOLLOW_statement_in_statements234);
					statement();
					state._fsp--;

					pushFollow(FOLLOW_statements_in_statements236);
					statements();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:150:11: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"



	// $ANTLR start "statement"
	// myCompiler.g:152:1: statement : ( assign_stmt ';' | if_stmt | func_no_return_stmt ';' );
	public final void statement() throws RecognitionException {
		try {
			// myCompiler.g:152:10: ( assign_stmt ';' | if_stmt | func_no_return_stmt ';' )
			int alt4=3;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==Identifier) ) {
				int LA4_1 = input.LA(2);
				if ( (LA4_1==29) ) {
					alt4=1;
				}
				else if ( (LA4_1==21) ) {
					alt4=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA4_0==IF) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// myCompiler.g:152:12: assign_stmt ';'
					{
					pushFollow(FOLLOW_assign_stmt_in_statement266);
					assign_stmt();
					state._fsp--;

					match(input,28,FOLLOW_28_in_statement268); 
					}
					break;
				case 2 :
					// myCompiler.g:153:12: if_stmt
					{
					pushFollow(FOLLOW_if_stmt_in_statement281);
					if_stmt();
					state._fsp--;

					}
					break;
				case 3 :
					// myCompiler.g:154:12: func_no_return_stmt ';'
					{
					pushFollow(FOLLOW_func_no_return_stmt_in_statement294);
					func_no_return_stmt();
					state._fsp--;

					match(input,28,FOLLOW_28_in_statement296); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statement"



	// $ANTLR start "if_stmt"
	// myCompiler.g:160:1: if_stmt : s= if_then_stmt if_else_stmt[$s.next] ;
	public final void if_stmt() throws RecognitionException {
		String s =null;

		try {
			// myCompiler.g:161:13: (s= if_then_stmt if_else_stmt[$s.next] )
			// myCompiler.g:161:15: s= if_then_stmt if_else_stmt[$s.next]
			{
			pushFollow(FOLLOW_if_then_stmt_in_if_stmt340);
			s=if_then_stmt();
			state._fsp--;

			pushFollow(FOLLOW_if_else_stmt_in_if_stmt342);
			if_else_stmt(s);
			state._fsp--;


			               TextCode.add(s+":");
			            
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "if_stmt"



	// $ANTLR start "if_then_stmt"
	// myCompiler.g:167:1: if_then_stmt returns [String next] : IF '(' b= cond_expression ')' block_stmt[next] ;
	public final String if_then_stmt() throws RecognitionException {
		String next = null;


		ParserRuleReturnScope b =null;

		try {
			// myCompiler.g:169:13: ( IF '(' b= cond_expression ')' block_stmt[next] )
			// myCompiler.g:169:15: IF '(' b= cond_expression ')' block_stmt[next]
			{
			match(input,IF,FOLLOW_IF_in_if_then_stmt386); 
			match(input,21,FOLLOW_21_in_if_then_stmt388); 
			pushFollow(FOLLOW_cond_expression_in_if_then_stmt392);
			b=cond_expression();
			state._fsp--;

			match(input,22,FOLLOW_22_in_if_then_stmt394); 

			               next=newLabel();
			               TextCode.add((b!=null?((myCompilerParser.cond_expression_return)b).Ctrue:null)+": ");
			            
			pushFollow(FOLLOW_block_stmt_in_if_then_stmt428);
			block_stmt(next);
			state._fsp--;


			                 TextCode.add((b!=null?((myCompilerParser.cond_expression_return)b).Cfalse:null)+": ");
			             
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return next;
	}
	// $ANTLR end "if_then_stmt"



	// $ANTLR start "if_else_stmt"
	// myCompiler.g:182:1: if_else_stmt[String next] : ( ELSE block_stmt[next] |);
	public final void if_else_stmt(String next) throws RecognitionException {
		try {
			// myCompiler.g:183:13: ( ELSE block_stmt[next] |)
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==ELSE) ) {
				alt5=1;
			}
			else if ( (LA5_0==IF||LA5_0==Identifier||LA5_0==31) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// myCompiler.g:183:15: ELSE block_stmt[next]
					{
					match(input,ELSE,FOLLOW_ELSE_in_if_else_stmt474); 
					pushFollow(FOLLOW_block_stmt_in_if_else_stmt476);
					block_stmt(next);
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:185:13: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "if_else_stmt"



	// $ANTLR start "block_stmt"
	// myCompiler.g:188:1: block_stmt[String next] : '{' statements '}' ;
	public final void block_stmt(String next) throws RecognitionException {
		try {
			// myCompiler.g:189:3: ( '{' statements '}' )
			// myCompiler.g:189:3: '{' statements '}'
			{
			match(input,30,FOLLOW_30_in_block_stmt520); 
			pushFollow(FOLLOW_statements_in_block_stmt522);
			statements();
			state._fsp--;

			match(input,31,FOLLOW_31_in_block_stmt524); 

			   TextCode.add("goto " + next);

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block_stmt"



	// $ANTLR start "assign_stmt"
	// myCompiler.g:196:1: assign_stmt : Identifier '=' arith_expression ;
	public final void assign_stmt() throws RecognitionException {
		Token Identifier3=null;
		Type arith_expression4 =null;

		try {
			// myCompiler.g:196:12: ( Identifier '=' arith_expression )
			// myCompiler.g:196:14: Identifier '=' arith_expression
			{
			Identifier3=(Token)match(input,Identifier,FOLLOW_Identifier_in_assign_stmt538); 
			match(input,29,FOLLOW_29_in_assign_stmt540); 
			pushFollow(FOLLOW_arith_expression_in_assign_stmt542);
			arith_expression4=arith_expression();
			state._fsp--;


						   Type the_type;
						   int the_mem;
						   
						   // get the ID's location and type from symtab.			   
						   the_type = (Type) symtab.get((Identifier3!=null?Identifier3.getText():null)).get(0);
						   the_mem = (int) symtab.get((Identifier3!=null?Identifier3.getText():null)).get(1);
						   
						   if (the_type != arith_expression4) {
						      System.out.println("Type error!\n");
							  System.exit(0);
						   }
						   
						   // issue store insruction:
			               // => store the top element of the operand stack into the locals.
						   switch (the_type) {
						   case INT:
						              TextCode.add("istore " + the_mem);
						              break;
						   case FLOAT:
			                        TextCode.add("fstore " + the_mem);
						              break;

						   }
			             
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assign_stmt"



	// $ANTLR start "func_no_return_stmt"
	// myCompiler.g:225:1: func_no_return_stmt : a= Identifier '(' b= argument ')' ;
	public final void func_no_return_stmt() throws RecognitionException {
		Token a=null;
		ParserRuleReturnScope b =null;

		try {
			// myCompiler.g:225:20: (a= Identifier '(' b= argument ')' )
			// myCompiler.g:225:22: a= Identifier '(' b= argument ')'
			{
			a=(Token)match(input,Identifier,FOLLOW_Identifier_in_func_no_return_stmt584); 

			                        if((a!=null?a.getText():null).equals("printf")){
			                           TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");
			                        }
			                     
			match(input,21,FOLLOW_21_in_func_no_return_stmt588); 
			pushFollow(FOLLOW_argument_in_func_no_return_stmt592);
			b=argument();
			state._fsp--;

			match(input,22,FOLLOW_22_in_func_no_return_stmt594); 

			                      
			                     
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "func_no_return_stmt"


	public static class argument_return extends ParserRuleReturnScope {
		public Type attr_type;
		public int type;
		public int cnt;
	};


	// $ANTLR start "argument"
	// myCompiler.g:236:1: argument returns [Type attr_type,int type,int cnt] : arg ( ',' arg )* ;
	public final myCompilerParser.argument_return argument() throws RecognitionException {
		myCompilerParser.argument_return retval = new myCompilerParser.argument_return();
		retval.start = input.LT(1);

		try {
			// myCompiler.g:236:50: ( arg ( ',' arg )* )
			// myCompiler.g:237:10: arg ( ',' arg )*
			{
			pushFollow(FOLLOW_arg_in_argument657);
			arg();
			state._fsp--;

			// myCompiler.g:237:14: ( ',' arg )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==25) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// myCompiler.g:237:15: ',' arg
					{
					match(input,25,FOLLOW_25_in_argument660); 
					pushFollow(FOLLOW_arg_in_argument662);
					arg();
					state._fsp--;

					}
					break;

				default :
					break loop6;
				}
			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "argument"


	public static class arg_return extends ParserRuleReturnScope {
		public Type attr_type;
		public int type;
		public int cnt;
	};


	// $ANTLR start "arg"
	// myCompiler.g:240:1: arg returns [Type attr_type,int type,int cnt] : (a= arith_expression | STRING_LITERAL );
	public final myCompilerParser.arg_return arg() throws RecognitionException {
		myCompilerParser.arg_return retval = new myCompilerParser.arg_return();
		retval.start = input.LT(1);

		Token STRING_LITERAL5=null;
		Type a =null;

		int cnt=0;
		try {
			// myCompiler.g:242:21: (a= arith_expression | STRING_LITERAL )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==Floating_point_constant||(LA7_0 >= Identifier && LA7_0 <= Integer_constant)||(LA7_0 >= 20 && LA7_0 <= 21)||LA7_0==26) ) {
				alt7=1;
			}
			else if ( (LA7_0==STRING_LITERAL) ) {
				alt7=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// myCompiler.g:243:1: a= arith_expression
					{

					     TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");

					pushFollow(FOLLOW_arith_expression_in_arg709);
					a=arith_expression();
					state._fsp--;


					               retval.attr_type =a; 
					               if(retval.attr_type==Type.FLOAT){
					               TextCode.add("invokevirtual java/io/PrintStream/print(F)V");
					               }
					               if(retval.attr_type==Type.INT){
					               TextCode.add("invokevirtual java/io/PrintStream/print(I)V");
					               }
					               if( maxremain!=0 ){
					                   TextCode.add("getstatic java/lang/System/out Ljava/io/PrintStream;");
					                   TextCode.add("ldc "+remain[rqueue.poll()]);
					                   maxremain--;
					                   TextCode.add("invokevirtual java/io/PrintStream/print(Ljava/lang/String;)V");
					               }
					            
					}
					break;
				case 2 :
					// myCompiler.g:261:6: STRING_LITERAL
					{
					STRING_LITERAL5=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_arg717); 
					 
					      int i=0;
